--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
-apply plugin: 'com.android.application'
+    apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+    apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 30
@@ -30,8 +31,49 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.1.0'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    // 01 - Add dependencies
+
+    // kotlin ktx
+    implementation 'androidx.core:core-ktx:1.1.0'
+    // LiveData ktx
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0-rc02'
+    // Lifecycle ktx
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.2.0-rc02'
+
+    // coroutines
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.2'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.2'
+
+    // Navigation component
+    implementation 'android.arch.navigation:navigation-fragment-ktx:1.0.0'
+    implementation 'android.arch.navigation:navigation-ui-ktx:1.0.0'
+
+    // Room
+    implementation 'androidx.room:room-runtime:2.2.1'
+      kapt 'androidx.room:room-compiler:2.2.1'
+
+    // Lifecycle Extensions and ViewModel
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.1.0'
+    implementation 'androidx.activity:activity:1.0.0'
+    implementation 'androidx.activity:activity-ktx:1.0.0'
+    implementation 'androidx.fragment:fragment-ktx:1.1.0'
+
+    // Material Design
+    implementation 'com.google.android.material:material:1.3.0-alpha03'
+
+    // Better log messages
+    implementation 'com.jakewharton.timber:timber:4.7.1'
+
+    // RetroFit
+    implementation 'com.squareup.retrofit2:retrofit:2.6.2'
+    implementation 'com.squareup.retrofit2:converter-gson:2.6.2'
+
+    // GSON
+    implementation 'com.google.code.gson:gson:2.8.6'
 
 }
