--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,4 +92,8 @@ dependencies {
     implementation 'com.google.maps.android:android-maps-utils:2.2.0'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
 
+    //Stetho
+    implementation 'com.facebook.stetho:stetho:1.5.1'
+    implementation 'com.facebook.stetho:stetho-okhttp3:1.5.1'
+
 }
